# VoLoRa

./: .gitignore  CMakeLists.txt  Kconfig  playback_output.py  print_serial.py  prj.conf  results.txt  sysbuild.conf
boards/: nrf5340dk_nrf5340_cpuapp.overlay
boards/volora/: Kconfig.defconfig  Kconfig.volora  board.cmake  board.yml  volora_nrf5340_cpuapp-pinctrl.dtsi  volora_nrf5340_cpuapp.dts  volora_nrf5340_cpuapp.yaml  volora_nrf5340_cpuapp_defconfig
lib/codec2/: codebook.c  codebookd.c  codebookge.c  codebookjmv.c  codebooknewamp1.c  codebooknewamp1_energy.c  codebooknewamp2.c  codebooknewamp2_energy.c  codec2.h  sine.c  version.h
scripts/: capture_audio.py
src/: codec2_alloc.c  hts1a.h  main.c
sysbuild/: CMakeLists.txt  mcuboot.conf  mcuboot.overlay
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: nrf5340dk_nrf5340_cpuapp.overlay
